--- a/BE/Alan.WebApi/appsettings.Development.json
+++ b/BE/Alan.WebApi/appsettings.Development.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AzureDocumentEndPoint": "a",
-  "AzureDocumentKey": "b"
+  "AzureDocumentEndPoint": "",
+  "AzureDocumentKey": "a",
+  "AzureOpenAIEndPoint": "",
+  "AzureOpenAIKey": "v"
 }
